# webos-telephonyd

./: CMakeLists.txt  README.md
drivers/ofono/: glib-helpers.h  ofono.c  ofonobase.c  ofonobase.h  ofonoconnectioncontext.c  ofonoconnectioncontext.h  ofonoconnectionmanager.c  ofonoconnectionmanager.h  ofonomanager.c  ofonomessage.c  ofonomessage.h  ofonomessagemanager.c  ofonomessagemanager.h  ofonomessagewatch.c  ofonomessagewatch.h  ofonomodem.c  ofonomodem.h  ofononetworkoperator.c  ofononetworkoperator.h  ofononetworkregistration.c  ofononetworkregistration.h  ofonoradiosettings.c  ofonoradiosettings.h  ofonosimmanager.c  ofonovoicecall.c  ofonovoicecall.h  ofonovoicecallmanager.c  ofonovoicecallmanager.h  telephony.c  wan.c
files/accounts/com.palm.telephony/: com.palm.telephony.json
files/activities/com.palm.telephony/: outgoing-sms.json
files/db8/kinds/: com.palm.mmsmessage  com.palm.smsmessage
files/db8/permissions/: com.palm.mmsmessage  com.palm.smsmessage
files/launch/: telephonyd.in  tild.in  webos-telephonyd.in
files/sysbus/: com.palm.telephony.json.prv.in  com.palm.telephony.json.pub.in  com.palm.telephony.service.pub.in  webos-telephonyd.api.json.in  webos-telephonyd.groups.json  webos-telephonyd.json.pub.in  webos-telephonyd.perm.json.in  webos-telephonyd.role.json.in  webos-telephonyd.roles.json.in  webos-telephonyd.service.in
files/systemd/: webos-telephonyd.service
files/xml/: ofono.xml
src/: luna_service_utils.c  luna_service_utils.h  main.c  telephonydriver.c  telephonydriver.h  telephonyservice.c  telephonyservice.h  telephonyservice_call.c  telephonyservice_internal.h  telephonyservice_misc.c  telephonyservice_net.c  telephonyservice_sim.c  telephonyservice_sms.c  telephonyservice_sms.h  telephonysettings.c  telephonysettings.h  utils.h  wandriver.h  wanservice.c  wanservice.h
src/ofono/: ofono.c  ofonobase.c  ofonobase.h  ofonoconnectionmanager.c  ofonoconnectionmanager.h  ofonomanager.c  ofonomanager.h  ofonomodem.c  ofonomodem.h  ofononetworkoperator.c  ofononetworkoperator.h  ofononetworkregistration.c  ofononetworkregistration.h  ofonoradiosettings.c  ofonoservicebase.c  ofonoservicebase.h  ofonosimmanager.c  ofonosimmanager.h
